examples/good/08-10-lists.ez
hasNth : [a] -> Integer -> Bool;
hasNth lst n = match lst with {
    [] -> False;
    x :: xs -> True if n == 0 otherwise hasNth xs (n - 1);
};

myempty: [a] -> Bool;
myempty lst = match lst with {
    [] -> True;
    x :: xs -> False;
};

myhead : [a] -> a;
myhead lst = match lst with { x :: xs -> x; };

mytail : [a] -> [a];
mytail lst = match lst with { x :: xs -> xs; };

oneTwoThree : [Integer];
oneTwoThree = [1, 2, 3];

main : Bool;
main = hasNth oneTwoThree 2 && ~(hasNth oneTwoThree 4); 
