examples/bad/wrong_type_arg_2.ez
f : [Integer] -> Bool;
f lst = True;

main : Bool;
main = f 2;
